<resources>
    <string name="app_name">StockPro</string>
    <string name="fetch_quote">Fetch Quote</string>
    <string name="manage_portfolio">Manage Portfolio</string>
    <string name="settings">Settings</string>

    <string name="hint_symbol">Symbol</string>
    <string name="hint_qty">Qty</string>

    <string name="add">Add</string>
    <string name="del">Del</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="add_portfolio">Add to Portfolio</string>


    <string name="amazon_qty">200 of AMZN</string>
    <string name="amazon_price">464.32</string>
    <string name="amazon_change">(+3.29)</string>
    <string name="amazon_name">Amazon Corporation</string>
    <string name="amazon_value">Value: 9286.40</string>

    <string name="microsoft_qty">100 of MSFT</string>
    <string name="microsoft_price">62.67</string>
    <string name="microsoft_change">(-0.29)</string>
    <string name="microsoft_name">Microsoft Corporation</string>
    <string name="microsoft_value">Value: 6267.00</string>


    <string name="refreshed">Refreshed at: 07/12/2016 3:45 PM EST</string>
    <string name="amazon_symbol">Symbol: AMZN</string>
    <string name="amazon_pr">Current Price: 464.32</string>
    <string name="amazon_ch">Change: (+3.29)</string>
    <string name="amazon_high">52 week high: 672.32</string>
    <string name="amazon_low">52 week low: 372.23</string>
    <string name="amazon_vol">Volume: 3200057</string>


    <string name="back_sync_title">Background Sync</string>
    <string name="back_sync_desc">Refresh portfolio every hour</string>
</resources>
