<?xml version="1.0" encoding="utf-8"?>



    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:padding="30dp"
        >
        <TextView
            android:id="@+id/title"
            style="@style/myTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/fetch_quote"/>

        <RelativeLayout
            android:id="@+id/data_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:padding="10dp"
            android:paddingBottom="20dp"
            >


            <EditText
                android:id="@+id/txt_symbol"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/hint_symbol"
                android:padding="10dp"/>


            <Button

                android:id="@+id/button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/colorGreen"
                android:text="@string/search"
                android:textAllCaps="false"

                android:textColor="@color/colorWhite"

                />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/data_row"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/refresh_time"
                style="@style/mySubText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refreshed"
               />

            <TextView
                android:id="@+id/symbol"
                style="@style/myNormalText"
                android:text="@string/amazon_symbol"
               />

            <TextView
                android:id="@+id/name"
                style="@style/myNormalText"
                android:text="@string/amazon_name"
                />

            <TextView
                android:id="@+id/price"
                style="@style/myNormalText"
                android:text="@string/amazon_pr"
                />

            <TextView
                android:id="@+id/change"
                style="@style/myNormalText"
                android:text="@string/amazon_ch"
                android:textColor="@color/colorGreen"
                />

            <TextView
                android:id="@+id/high"
                style="@style/myNormalText"
                android:text="@string/amazon_high"
                />

            <TextView
                android:id="@+id/low"
                style="@style/myNormalText"
                android:text="@string/amazon_low"
                />

            <TextView
                android:id="@+id/vol"
                style="@style/myNormalText"
                android:text="@string/amazon_vol"
                />




        </LinearLayout>



        <Button

            android:id="@+id/btn_add_portfolio"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorGreen"
            android:text="@string/add_portfolio"
            android:textAllCaps="false"

            android:textColor="@color/colorWhite"

            />

    </RelativeLayout>


