<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="40dp"
    >

    <TextView
        android:id="@+id/title"
        style="@style/myTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/settings"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/back_title"
            style="@style/myEmpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingBottom="2dp"
            android:text="@string/back_sync_title"

            />

        <TextView
            android:id="@+id/back_desc"
            style="@style/myNormalText"
            android:layout_below="@id/back_title"

            android:paddingLeft="10dp"

            android:text="@string/back_sync_desc"
            />
        <CheckBox android:id="@+id/checkbox_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/back_sync_title"

           />
    </RelativeLayout>

</LinearLayout>
